--- a/views/index/welcome.handlebars
+++ b/views/index/welcome.handlebars
@@ -5,4 +5,9 @@
 <p>
   Post Stories from the best and worst of your life, and choose for them to be read by the world or completely private as your own personal diary
 </p>
-<a class="btn red darken-1" href=""><i class="fa fa-google left"></i>Login with Google</a>
+{{#if user}}
+{{else}}
+  <a class="btn red darken-1" href="/auth/google">
+    <i class="fa fa-google left"></i>Login with Google
+  </a>
+{{/if}}
