--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,8 +22,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script>
     $(document).ready(() => {
-      $('.button-collapse').sideNav();
-    })
+      $('.sidenav').sidenav();
+    });
   </script>
 </body>
 
