--- a/views/partials/_header.handlebars
+++ b/views/partials/_header.handlebars
@@ -6,7 +6,7 @@
       <!-- RIGHT NAV -->
       <ul class="right hide-on-small-only">
         {{#if user}}
-          <li><a href="/dashboard">Welcome {‌{user.firstName}}</a></li>
+          <li><a href="/dashboard"></a>Welcome {{user.firstName}}</li>
           <li><a href="/auth/logout"><i class="fa fa-sign-out"></i> Logout</a></li>
         {{else}}
           <li><a href="/stories"><i class="fa fa-book"></i> Public Stories</a></li>
