--- a/views/stories/add.handlebars
+++ b/views/stories/add.handlebars
@@ -1,4 +1,4 @@
-<h1>add</h1>
+<h1>Add a Story</h1>
 <div class="row">
   <form action="/stories" method="post" class="col s12">
     <div class="row">
