--- a/views/stories/show.handlebars
+++ b/views/stories/show.handlebars
@@ -1,1 +1,26 @@
-<h1>show</h1>
+<div class="row">
+  <div class="col s12 m8">
+    <h3>{{story.title}}</h3>
+    <div class="card story">
+      <div class="card-content">
+        <span class="card-title">{{story.date}}</span>
+        <div class="card-content" style="overflow-wrap: break-word;">
+          {{{story.body}}}
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col s12 m4">
+    <div class="card center-align">
+      <div class="card-content">
+        <span class="card-title">
+          {{story.user.firstName}} {{story.user.LastName}}
+        </span>
+        <img src="{{story.user.image}}" class="circle responsive-img">
+      </div>
+      <div class="card-action">
+        <a href="/stories/user/{{story.user.id}}">More From {{story.user.firstName}}</a>
+      </div>
+    </div>
+  </div>
+</div>
