configured image and front end along with a date helper

--- a/views/stories/index.handlebars
+++ b/views/stories/index.handlebars
@@ -18,7 +18,7 @@
           </p>
           <br>
           <div class="chip">
-            <img src={{user.image}} alt="Contact Person">
+            <img src="{{user.image}}" alt="">
             {{user.firstName}} {{user.lastName}}
           </div>
         </div>
