--- a/views/index/dashboard.handlebars
+++ b/views/index/dashboard.handlebars
@@ -1,2 +1,40 @@
 <h1>Welcome {{user.firstName}}</h1>
 <h4>Your Stories</h4>
+
+{{#if stories}}
+  <table class="striped">
+    <thread>
+      <tr>
+        <th>Title</th>
+        <th>Date</th>
+        <th>Status</th>
+        <th>Edit</th>
+      </tr>
+    </thread>
+    <tbody>
+      {{#each stories}}
+        <tr>
+          <td>
+            <a href="/stories/show/{{id}}">{{title}}</a>
+          </td>
+          <td>{{formatDate data 'MMMM Do YYYY'}}</td>
+          <td>
+            <span class="dash-status">{{status}}</span>
+          </td>
+          <td><a href="/stories/edit/{{id}}" class="btn left-align">
+              <i class="fa fa-pencil"></i> Edit</a>
+
+            <form action="/stories/{{id}}" method="post" id="delete-form">
+              <button type="submit" class="btn red"><i class="fa fa-remove"></i>
+                Delete
+              </button>
+            </form>
+          </td>
+
+        </tr>
+      {{/each}}
+    </tbody>
+  </table>
+{{else}}
+  <p>You have not created any stories yet</p>
+{{/if}}
