--- a/views/stories/add.handlebars
+++ b/views/stories/add.handlebars
@@ -19,9 +19,10 @@
     </div>
     <div class="row">
       <p>
-        <input type="checkbox" name="allowComments" class="filled-in" checked="checked" />
-        <span></span>
-        <label for="allowComments">Allow Comments</label>
+        <label>
+          <input type="checkbox" name="allowComments" checked="checked" />
+          <span>Allow Comments</span>
+        </label>
       </p>
     </div>
     <div class="row">
