--- a/views/stories/index.handlebars
+++ b/views/stories/index.handlebars
@@ -20,7 +20,9 @@
           <br>
           <div class="chip">
             <img src="{{user.image}}" alt="">
-            {{user.firstName}} {{user.lastName}}
+            <a href="/stories/user/{{user.id}}">
+              {{user.firstName}} {{user.lastName}}
+            </a>
           </div>
         </div>
         <div class="card-action center-align">
